--- a/lesson_17/lesson_17/css/style.css
+++ b/lesson_17/lesson_17/css/style.css
@@ -8,12 +8,16 @@
 	flex-direction: column;
 	align-items: center;
 
+
 	min-height: 100%;
 	overflow: clip;
-		background-color: #FDF0E9;
+
 }
 .wrapper > main {
 	flex-grow: 1;
+}
+body {
+			background-color: #FDF0E9;
 }
 
 
@@ -27,16 +31,19 @@ margin: 0 auto;
 
 /* ===header=== */
 .header {
-	display: flex;
+	z-index: 100;
+	align-self: stretch;
+
 }
 .header__body {
-
+max-width: 1200px;
 min-height: 120px;
 
 width: 100%;
-/* flex-shrink: 1; */
+margin: 0 auto;
+
 flex-grow: 1;
-max-width: 1200px;
+flex-basis: 1200px;
 
 	display: flex;
 	align-items: center;
@@ -45,18 +52,16 @@ max-width: 1200px;
 
 	padding-inline: 10px;
 
-	color: #000;
-	background-color:#FDF0E9;
-
 
 }
 
 .header__logo-container {
-
+z-index: 20;
 min-height: 40px;
 background-color: #4d3021;
 padding: 5px;
 aspect-ratio: 200 / 70;
+flex-basis: 200px;
 }
 .header__logo {
 object-fit: contain;
@@ -64,7 +69,7 @@ max-width: 100%;
 height: 100%;
 }
 
-
+.footer__menu-body,
 .header__menu-body {
 flex-grow: 1;
 flex-basis: 200px;
@@ -81,17 +86,24 @@ flex-wrap: wrap;
 padding: 10px;
 border: 1px solid #454501;
 border-radius: 8px;
+
 }
 .menu__item {
 }
 .menu__link {
-	color: #000;
+	color: #441111;
 	line-height: 1.5;
 	padding: 10px;
 
 	border: 1px solid #fdf0e9;
 border-radius: 8px;
 }
+.menu__link:hover,
+.menu__link:focus {
+color: #0f0;
+}
+
+
 
 
 .header__icon-box {
@@ -103,6 +115,8 @@ background-color: #4d3021;
 padding: 20px;
 gap: 15px;
 
+flex-basis: 200px;
+
 }
 
 .header__search-box {
@@ -112,47 +126,119 @@ gap: 15px;
 .header__burger-menu {
 	display: none;
 }
-.header__burger-menu {
-width: 30px;
-height: 18px;
-position: relative;
 
-display: flex;
-flex-direction: column;
-
+.header__action-menu {
+display: none;
 }
-.header__burger-menu span,
-.header__burger-menu::after,
-.header__burger-menu::before {
-content: "";
-/* position: absolute;
+
+@media (max-width: 622px) {
+	.header__logo-container {
+		flex-grow: 1;
+		background-color: #dddddd;
+		padding: 3px;
+		border-radius: 5px;
+	}
+
+	.header__menu-body {
+		display: none;
+
+	}
+
+
+.header__burger-menu {
+	z-index: 9999;
+		width: 30px;
+		height: 18px;
+		position: relative;
+
+		display: flex;
+		flex-direction: column;
+
+	}
+
+	.header__burger-menu span,
+	.header__burger-menu::after,
+	.header__burger-menu::before {
+		content: "";
+		/* position: absolute;
 inset: 0; */
 
-	display: inline-block;
-height: 2px;
-width: 100%;
-background-color: #FDF0E9;
-transition: transform 0.5s;
-}
-.header__burger-menu span {
-	margin-block: 6px;
 		display: inline-block;
-			height: 2px;
-			width: 100%;
-			background-color: #ec5f5f;
+		height: 2px;
+		width: 100%;
+		background-color: #FDF0E9;
+		transition: transform 0.5s;
+	}
 
-}
-.open-menu .header__burger-menu::before {
+	.header__burger-menu span {
+		margin-block: 6px;
+		display: inline-block;
+		height: 2px;
+		width: 100%;
+		background-color: #ec5f5f;
 
-transform: rotate(45deg) translateY(1px);
-}
-.open-menu .header__burger-menu span {
-	display: none;
-}
-.open-menu .header__burger-menu::after {
+	}
 
-	transform: rotate(-45deg) translateY(-1px);
+	.open-menu .header__burger-menu::before {
+
+		transform: rotate(45deg) translateY(1px);
+	}
+
+	.open-menu .header__burger-menu span {
+		display: none;
+	}
+
+	.open-menu .header__burger-menu::after {
+
+		transform: rotate(-45deg) translateY(-1px);
+	}
+	.open-menu 	.header__action-menu {
+		display: inline-block;
+		position: absolute;
+		top: 20px;
+		right: 10px;
+		width: 50%;
+
+	}
+				.open-menu .header__action-menu::before {
+					content: "";
+					display: inline-block;
+					height: 80px;
+					width: 100%;
+
+					background-color: #582c04;
+					border-radius: 8px;
+				}
+		.menu__list {
+			position: relative;
+			z-index: 999;
+flex-direction: column;
+align-items: end;
+background-color: #dddddd;
+row-gap: 30px;
+
+padding-block: 5px;
+
+background: linear-gradient(
+	to left,
+	#4d3021 10%,
+	transparent
+);
+box-shadow: 0px 3px 3px 1px #000;
+overflow: auto;
+border: none;
+		}
+		.menu__link {
+			padding-block: 10px;
+			line-height: 2;
+			font-size: 20px;
+			border: none;
+			color: #fbf7f4;
+
+		}
+		
 }
+
 
 /* ===/header=== */
 /* --slider  */
@@ -171,7 +257,6 @@ transform: rotate(45deg) translateY(1px);
 .slider {
 	width: 100%;
 	height: var(--height);
-
 	mask-image: linear-gradient(
 		to right,
 		transparent,
@@ -836,3 +921,26 @@ display: flex;
 	}
 
 /* --section 02 */
+/* footer */
+.footer {
+
+}
+.footer__menu-body {
+	padding-block: 40px;
+	display: flex;
+	flex-basis: 700px;
+
+}
+
+.menu {}
+
+.footer__menu-body .menu__list {
+	border: 10px solid #eeddee;
+	box-shadow: 0 0 1px 1px #fefefe, 10px 10px 5px #2d2d2d, inset 3px 3px 5px #ffffff;
+	border-radius: 8px;
+
+}
+
+.menu__item {}
+
+.menu__link {}
